# script_certificados_openssl

./: README.md  pyproject.toml
certification_automation/: __init__.py  config.py  criar_pastas.py  gerar_certificados.py
